# iced-workspaces-applet

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.system76.IcedWorkspacesApplet.Devel.json
data/: com.system76.IcedWorkspacesApplet.desktop.in.in  com.system76.IcedWorkspacesApplet.gschema.xml.in  com.system76.IcedWorkspacesApplet.metainfo.xml.in.in
debian/: changelog  control  copyright  rules
i18n/en/: iced_workspaces_applet.ftl
po/: POTFILES.in
src/: main.rs  wayland.rs  wayland_subscription.rs
src/components/: app.rs
