[package]
name = "iced-workspaces-applet"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[dependencies]
iced = { git = "https://github.com/wash2/iced", features = ["wgpu", "default_system_font", "palette", "svg", "image", "tokio"], branch = "custom-theme" }
iced_native = { git = "https://github.com/wash2/iced", branch = "custom-theme"  }
iced_style = { git = "https://github.com/wash2/iced", branch = "custom-theme"  }
adw-user-colors-lib = { git = "https://github.com/pop-os/user-color-editor" }
cosmic-panel-config = { git = "https://github.com/pop-os/cosmic-panel" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = ["client"] }
wayland-backend = { git = "https://github.com/Smithay/wayland-rs", version = "0.1.0-beta.9"}
wayland-client = { git = "https://github.com/Smithay/wayland-rs", version = "0.30.0-beta.9"}
calloop = "0.10.1"
nix = "0.25.0"
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.9"
futures = "0.3.21"
xdg = "2.4.0"
anyhow = "1.0"
# Application i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"

[patch.crates-io]
wayland-protocols = { git = "https://github.com/smithay/wayland-rs", version = "0.30.0-beta.9"}
wayland-sys = { git = "https://github.com/smithay/wayland-rs", version = "0.30.0-beta.9"}
wayland-backend = { git = "https://github.com/smithay/wayland-rs", version = "0.1.0-beta.9"}
wayland-scanner = { git = "https://github.com/smithay/wayland-rs", version = "0.30.0-beta.9"}
wayland-client = { git = "https://github.com/smithay/wayland-rs", version = "0.30.0-beta.9"}
